--- a/app/index2.html
+++ b/app/index2.html
@@ -9,24 +9,12 @@
       }
     </style>
     <script src="http://openlayers.org/en/v3.0.0/build/ol.js" type="text/javascript"></script>
+    <script src="./lib/jquery/jquery-1.11.3.min.js"></script>
     <title>OpenLayers 3 example</title>
   </head>
   <body>
     <h2>My Map</h2>
     <div id="map" class="map"></div>
-    <script type="text/javascript">
-      var map = new ol.Map({
-        target: 'map',
-        layers: [
-          new ol.layer.Tile({
-            source: new ol.source.MapQuest({layer: 'osm'})
-          })
-        ],
-        view: new ol.View({
-          center: ol.proj.transform([27.079751, 64.943554], 'EPSG:4326', 'EPSG:3857'),
-          zoom: 4
-        })
-      });
-    </script>
+    <script src="./js/test.js" type="text/javascript"></script>
   </body>
 </html>
