--- a/app/samples/read-GeoJSON.html
+++ b/app/samples/read-GeoJSON.html
@@ -9,12 +9,12 @@
       }
     </style>
     <script src="http://openlayers.org/en/v3.0.0/build/ol.js" type="text/javascript"></script>
-    <script src="./lib/jquery/jquery-1.11.3.min.js"></script>
-    <title>OpenLayers 3 example</title>
+    <script src="../lib/jquery/jquery-1.11.3.min.js"></script>
+    <title>OL3 - readGeoJSON</title>
   </head>
   <body>
     <h2>My Map</h2>
     <div id="map" class="map"></div>
-    <script src="./js/test.js" type="text/javascript"></script>
+    <script src="../js/samples/read-GeoJSON.js" type="text/javascript"></script>
   </body>
 </html>
