--- a/app/samples/reprojection.html
+++ b/app/samples/reprojection.html
@@ -1,20 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="http://openlayers.org/en/v3.0.0/css/ol.css" type="text/css">
+    <link rel="stylesheet" href="../lib/openlayers-3.8.2/css/ol.css" type="text/css">
     <style>
-      .map {
-        height: 400px;
+      html, body, .map {
+        margin: 0;
+        padding: 0;
         width: 100%;
+        height: 100%;
       }
     </style>
-    <script src="http://openlayers.org/en/v3.0.0/build/ol.js" type="text/javascript"></script>
-    <script src="./lib/jquery/jquery-1.11.3.min.js"></script>
-    <title>OL3 - readGeoJSON</title>
+    <script src="../lib/openlayers-3.8.2/build/ol.js"></script>
+    <script src="../lib/jquery/jquery-1.11.3.min.js"></script>
+    <title>OL3 - reprojection</title>
   </head>
   <body>
     <h2>My Map</h2>
     <div id="map" class="map"></div>
-    <script src="./js/samples/reprojection.js" type="text/javascript"></script>
+    <script src="../js/samples/reprojection.js" type="text/javascript"></script>
   </body>
 </html>
