--- a/app/web/index.html
+++ b/app/web/index.html
@@ -3,13 +3,13 @@
 <head>
 
     <title>Hamk-MapProject</title>
-
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.3/css/bootstrap-select.min.css" />
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
-    <link rel="stylesheet" href="../src/L.Control.Sidebar.css" />
+    <link rel="stylesheet" href="./lib/bootstrap/3.3.5-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./lib/bootstrap/ext-select/dist/css/bootstrap-select.min.css" />
+    <link rel="stylesheet" href="./lib/leaflet/1.0.0-b1/leaflet.css" />
+    <link rel="stylesheet" href="./lib/leaflet/ext-sidebar/src/L.Control.Sidebar.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.ie.css" /><![endif]-->
 
     <style>
@@ -27,8 +27,10 @@
             color: #AAA;
         }
     </style>
+
 </head>
 <body>
+
     <div id="sidebar">
         <h2>Dropdown</h2>
         <div class="dropdown">
@@ -66,62 +68,22 @@
         </div>
     </div>
 
+    <!-- ============================================================================ -->
+
     <div id="map"></div>
 
-    <a href="https://github.com/Turbo87/leaflet-sidebar/"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    <!-- ============================================================================ -->
 
-    <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.7.3/js/bootstrap-select.min.js"></script>
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
-    <script src="../src/L.Control.Sidebar.js"></script>
+    <script src="./lib/jquery/2.1.4/jquery.min.js"></script>
+    <script src="./lib/bootstrap/3.3.5-dist/js/bootstrap.min.js"></script>
+    <script src="./lib/bootstrap/ext-select/dist/js/bootstrap-select.min.js"></script>
+    <script src="./lib/leaflet/1.0.0-b1/leaflet.js"></script>
+    <script src="./lib/leaflet/ext-sidebar/src/L.Control.Sidebar.js"></script>
+
+    <script src="./js/map-loader.js"></script>
 
     <script>
-        var map = L.map('map');
-        map.setView([51.2, 7], 9);
-
-        L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            maxZoom: 18,
-            attribution: 'Map data &copy; OpenStreetMap contributors'
-        }).addTo(map);
-
-        var sidebar = L.control.sidebar('sidebar', {
-            closeButton: true,
-            position: 'left'
-        });
-        map.addControl(sidebar);
-
-        setTimeout(function () {
-            sidebar.show();
-        }, 500);
-
-        var marker = L.marker([51.2, 7]).addTo(map).on('click', function () {
-            sidebar.toggle();
-        });
-
-        map.on('click', function () {
-            sidebar.hide();
-        })
-
-        sidebar.on('show', function () {
-            console.log('Sidebar will be visible.');
-        });
-
-        sidebar.on('shown', function () {
-            console.log('Sidebar is visible.');
-        });
-
-        sidebar.on('hide', function () {
-            console.log('Sidebar will be hidden.');
-        });
-
-        sidebar.on('hidden', function () {
-            console.log('Sidebar is hidden.');
-        });
-
-        L.DomEvent.on(sidebar.getCloseButton(), 'click', function () {
-            console.log('Close button clicked.');
-        });
+        
     </script>
 </body>
 </html>
