--- a/app/web/index.html
+++ b/app/web/index.html
@@ -41,6 +41,41 @@
 
     <div id="sidebar">
         <h2>Dropdown</h2>
+        <div class="dropdown">
+            <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Tutorials <span class="caret"></span></button>
+            <ul class="dropdown-menu" role="menu">
+                <li><a role="menuitem" tabindex="-1" href="#">HTML</a></li>
+                <li><a role="menuitem" tabindex="-1" href="#">CSS</a></li>
+                <li><a role="menuitem" tabindex="-1" href="#">JavaScript</a></li>
+                <li><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
+            </ul>
+        </div>
+
+        <h2>Select</h2>
+        <a href="http://silviomoreto.github.io/bootstrap-select/">bootstrap-select plugin</a>
+        <p></p>
+        <div class="dropdown">
+            <select class="selectpicker" title="This is a test select">
+                <option>Option1</option>
+                <option>Option2</option>
+                <option>Option3</option>
+                <option>Option4</option>
+                <option>Option5</option>
+            </select>
+        </div>
+        <div class="dropdown" >
+            <select class="selectpicker" name="test multiselect" title="multiselect test" multiple>
+                <option value="">1</option>
+                <option value="">2</option>
+                <option value="">3</option>
+                <option value="">4</option>
+                <option value="">5</option>
+                <option value="">6</option>
+                <option value="">7</option>
+            </select>
+        </div>
+        
+        <h2>Dropdown</h2>
         
         <p>Post hoc impie perpetratum quod in aliis quoque iam timebatur, tamquam licentia crudelitati indulta per suspicionum nebulas aestimati quidam noxii damnabantur. quorum pars necati, alii puniti bonorum multatione actique laribus suis extorres nullo sibi relicto praeter querelas et lacrimas, stipe conlaticia victitabant, et civili iustoque imperio ad voluntatem converso cruentam, claudebantur opulentae domus et clarae.</p>
 
