Clean repo + Update README sources

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -6,35 +6,24 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+    <!-- ============================================================================ -->
     <link rel="stylesheet" href="./lib/bootstrap/3.3.5-dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./lib/bootstrap/ext-select/dist/css/bootstrap-select.min.css" />
     <link rel="stylesheet" href="./lib/leaflet/1.0.0-b1/leaflet.css" />
     <link rel="stylesheet" href="./lib/leaflet/ext-sidebar/src/L.Control.Sidebar.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.ie.css" /><![endif]-->
+    <link rel="stylesheet" href="./css/main.css" />
 
+    <!-- ============================================================================ -->
     <script src="./lib/jquery/2.1.4/jquery.min.js"></script>
     <script src="./lib/bootstrap/3.3.5-dist/js/bootstrap.min.js"></script>
     <script src="./lib/bootstrap/ext-select/dist/js/bootstrap-select.min.js"></script>
     <script src="./lib/leaflet/1.0.0-b1/leaflet.js"></script>
     <script src="./lib/leaflet/ext-sidebar/src/L.Control.Sidebar.js"></script>
 
+    <!-- ============================================================================ -->
+    <script src="./js/geoserver-layers.js"></script>
     <script src="./js/map-loader.js"></script>
-
-    <style>
-        body {
-            padding: 0;
-            margin: 0;
-        }
-
-        html, body, #map {
-            height: 100%;
-        }
-
-        .lorem {
-            font-style: italic;
-            color: #AAA;
-        }
-    </style>
 
 </head>
 <body>
@@ -74,7 +63,7 @@
                 <option value="">7</option>
             </select>
         </div>
-        
+
         <h2>Dropdown</h2>
         
         <p>Post hoc impie perpetratum quod in aliis quoque iam timebatur, tamquam licentia crudelitati indulta per suspicionum nebulas aestimati quidam noxii damnabantur. quorum pars necati, alii puniti bonorum multatione actique laribus suis extorres nullo sibi relicto praeter querelas et lacrimas, stipe conlaticia victitabant, et civili iustoque imperio ad voluntatem converso cruentam, claudebantur opulentae domus et clarae.</p>
