--- a/app/web/index.html
+++ b/app/web/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="./lib/bootstrap/3.3.5-dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./lib/bootstrap/ext-select/dist/css/bootstrap-select.min.css" />
     <link rel="stylesheet" href="./lib/leaflet/1.0.0-b1/leaflet.css" />
-    <link rel="stylesheet" href="./lib/leaflet/ext-sidebar/src/L.Control.Sidebar.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.ie.css" /><![endif]-->
+    <link rel="stylesheet" href="./lib/leaflet/ext-sidebar/src/L.Control.Sidebar.css" />
+    <link rel="stylesheet" href="./lib/leaflet/ext-easybutton/src/easy-button.css">
     <link rel="stylesheet" href="./css/main.css" />
 
     <!-- ============================================================================ -->
@@ -20,6 +21,7 @@
     <script src="./lib/bootstrap/ext-select/dist/js/bootstrap-select.min.js"></script>
     <script src="./lib/leaflet/1.0.0-b1/leaflet.js"></script>
     <script src="./lib/leaflet/ext-sidebar/src/L.Control.Sidebar.js"></script>
+    <script src="./lib/leaflet/ext-easybutton/src/easy-button.js"></script>
 
     <!-- ============================================================================ -->
     <script src="./js/geoserver-layers.js"></script>
