--- a/app/web/index.html
+++ b/app/web/index.html
@@ -22,6 +22,7 @@
     <script src="./lib/leaflet/1.0.0-b1/leaflet.js"></script>
     <script src="./lib/leaflet/ext-sidebar/src/L.Control.Sidebar.js"></script>
     <script src="./lib/leaflet/ext-easybutton/src/easy-button.js"></script>
+    <script src="./lib/leaflet/ext-leaflet-ajax/dist/leaflet.ajax.min.js"></script>
 
     <!-- ============================================================================ -->
     <script src="./js/geoserver-layers.js"></script>
