--- a/app/web/index.html
+++ b/app/web/index.html
@@ -25,6 +25,7 @@
     <script src="./lib/leaflet/ext-leaflet-ajax/dist/leaflet.ajax.min.js"></script>
 
     <!-- ============================================================================ -->
+    <script src="./js/classLayer.js"></script>
     <script src="./js/geoserver-layers.js"></script>
     <script src="./js/map-loader.js"></script>
 
