Edit after rename file

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -26,8 +26,8 @@
 
     <!-- ============================================================================ -->
     <script src="./js/classLayer.js"></script>
-    <script src="./js/geoserver-layers.js"></script>
-    <script src="./js/map-loader.js"></script>
+    <script src="./js/actionGeoServerLayer.js"></script>
+    <script src="./js/actionMapLoader.js"></script>
 
 </head>
 <body>
