Small fix mapLaoder

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -34,55 +34,10 @@
 
     <div id="sidebar">
         <h2>Dropdown</h2>
-        <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Tutorials <span class="caret"></span></button>
-            <ul class="dropdown-menu" role="menu">
-                <li><a role="menuitem" tabindex="-1" href="#">HTML</a></li>
-                <li><a role="menuitem" tabindex="-1" href="#">CSS</a></li>
-                <li><a role="menuitem" tabindex="-1" href="#">JavaScript</a></li>
-                <li><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
-            </ul>
-        </div>
-
-        <h2>Select</h2>
-        <a href="http://silviomoreto.github.io/bootstrap-select/">bootstrap-select plugin</a>
-        <p></p>
-        <div class="dropdown">
-            <select class="selectpicker" title="This is a test select">
-                <option>Option1</option>
-                <option>Option2</option>
-                <option>Option3</option>
-                <option>Option4</option>
-                <option>Option5</option>
-            </select>
-        </div>
-        <div class="dropdown" >
-            <select class="selectpicker" name="test multiselect" title="multiselect test" multiple>
-                <option value="">1</option>
-                <option value="">2</option>
-                <option value="">3</option>
-                <option value="">4</option>
-                <option value="">5</option>
-                <option value="">6</option>
-                <option value="">7</option>
-            </select>
-        </div>
+        
+        <div id="toc"></div>
 
         <h2>Dropdown</h2>
-
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Checkbox</h3>
-            </div>
-            <div class="panel-body">
-                <div class="input-group">
-                    <span class="input-group-addon">
-                        <input type="checkbox" name="">
-                    </span>
-                    <input type="text" class="form-control" >
-                </div><!-- /input-group -->
-            </div>
-        </div>
 
         <div class="panel panel-default">
             <div class="panel-heading">
