--- a/app/web/index.html
+++ b/app/web/index.html
@@ -2,75 +2,80 @@
 <html>
 <head>
 
-    <title>Hamk-MapProject</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>Hamk-MapProject</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <!-- ============================================================================ -->
-    <link rel="stylesheet" href="./lib/bootstrap/3.3.5-dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./lib/bootstrap/ext-select/dist/css/bootstrap-select.min.css" />
-    <link rel="stylesheet" href="./lib/leaflet/1.0.0-b1/leaflet.css" />
-    <!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.ie.css" /><![endif]-->
-    <link rel="stylesheet" href="./lib/leaflet/ext-sidebar/src/L.Control.Sidebar.css" />
-    <link rel="stylesheet" href="./lib/leaflet/ext-easybutton/src/easy-button.css">
-    <link rel="stylesheet" href="./css/main.css" />
+  <!-- ==================================================================== -->
+  <link rel="stylesheet" 
+    href="./lib/bootstrap/3.3.5-dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" 
+    href="./lib/bootstrap/ext-select/dist/css/bootstrap-select.min.css" />
+  <link rel="stylesheet" 
+    href="./lib/leaflet/1.0.0-b1/leaflet.css" />
+  <!--[if lte IE 8]>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.ie.css" />
+  <![endif]-->
+  <link rel="stylesheet" 
+    href="./lib/leaflet/ext-sidebar/src/L.Control.Sidebar.css" />
+  <link rel="stylesheet" 
+    href="./lib/leaflet/ext-easybutton/src/easy-button.css">
+  <link rel="stylesheet" 
+    href="./css/main.css" />
 
-    <!-- ============================================================================ -->
-    <script src="./lib/jquery/2.1.4/jquery.min.js"></script>
-    <script src="./lib/bootstrap/3.3.5-dist/js/bootstrap.min.js"></script>
-    <script src="./lib/bootstrap/ext-select/dist/js/bootstrap-select.min.js"></script>
-    <script src="./lib/leaflet/1.0.0-b1/leaflet.js"></script>
-    <script src="./lib/leaflet/ext-sidebar/src/L.Control.Sidebar.js"></script>
-    <script src="./lib/leaflet/ext-easybutton/src/easy-button.js"></script>
-    <script src="./lib/leaflet/ext-leaflet-ajax/dist/leaflet.ajax.min.js"></script>
+  <!-- ==================================================================== -->
+  <script src="./lib/jquery/2.1.4/jquery.min.js"></script>
+  <script src="./lib/bootstrap/3.3.5-dist/js/bootstrap.min.js"></script>
+  <script 
+    src="./lib/bootstrap/ext-select/dist/js/bootstrap-select.min.js"></script>
+  <script src="./lib/leaflet/1.0.0-b1/leaflet.js"></script>
+  <script src="./lib/leaflet/ext-sidebar/src/L.Control.Sidebar.js"></script>
+  <script src="./lib/leaflet/ext-easybutton/src/easy-button.js"></script>
+  <script src="./lib/leaflet/ext-leaflet-ajax/dist/leaflet.ajax.min.js"></script>
 
-    <!-- ============================================================================ -->
-    <script src="./js/classLayer.js"></script>
-    <script src="./js/actionGeoServerLayers.js"></script>
-    <script src="./js/actionMapLoader.js"></script>
+  <!-- ==================================================================== -->
+  <script src="./js/classLayer.js"></script>
+  <script src="./js/actionGeoServerLayers.js"></script>
+  <script src="./js/actionMapLoader2.js"></script>
 
 </head>
 <body>
 
-    <div id="sidebar">
-        <h2>Dropdown</h2>
-        
-        <div id="toc"></div>
+  <div id="sidebar">
+  <h2 id="toc-title"></h2>
+  <p id="toc-description"></p><br />
+  <div id="toc-content"></div>
 
-        <h2>Dropdown</h2>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Radio</h3>
+    </div>
+    <div class="panel-body">
 
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Radio</h3>
-            </div>
-            <div class="panel-body">
-
-                <div class="input-group">
-                    <span class="input-group-addon">
-                        <input type="radio" name="radioInput" id="1">
-                    </span>
-                    <input type="text" class="form-control" value="Toto" readonly>
-                </div><!-- /input-group -->
-                <div class="input-group">
-                    <span class="input-group-addon">
-                        <input type="radio" name="radioInput" id="2">
-                    </span>
-                    <input type="text" class="form-control" value="Hello" readonly>
-                </div><!-- /input-group -->
-
-            </div>
-        </div>
-
+      <div class="input-group">
+        <span class="input-group-addon">
+          <input type="radio" name="radioInput" id="1">
+        </span>
+        <input type="text" class="form-control" value="Toto" readonly>
+      </div><!-- /input-group -->
+      <div class="input-group">
+        <span class="input-group-addon">
+          <input type="radio" name="radioInput" id="2">
+        </span>
+        <input type="text" class="form-control" value="Hello" readonly>
+      </div><!-- /input-group -->
 
     </div>
+  </div>
 
-    <!-- ============================================================================ -->
 
-    <div id="map"></div>
+  </div>
 
-    <!-- ============================================================================ -->
+  <!-- ==================================================================== -->
 
-    
+  <div id="map"></div>
+
+  <!-- ==================================================================== -->
 
 </body>
 </html>
