--- a/app/web/index.html
+++ b/app/web/index.html
@@ -36,7 +36,7 @@
   <!-- ==================================================================== -->
   <script src="./js/classLayer.js"></script>
   <script src="./js/actionGeoServerLayers.js"></script>
-  <script src="./js/actionMapLoader2.js"></script>
+  <script src="./js/actionMapLoader.js"></script>
 
 </head>
 <body>
