--- a/app/web/index.html
+++ b/app/web/index.html
@@ -35,8 +35,10 @@
 
   <!-- ==================================================================== -->
   <script src="./js/classLayer.js"></script>
+  <script src="./js/loadPopup.js"></script>
   <script src="./js/actionGeoServerLayers.js"></script>
   <script src="./js/actionMapLoader.js"></script>
+
 
 </head>
 <body>
@@ -52,6 +54,8 @@
   <div id="map"></div>
 
   <!-- ==================================================================== -->
+
+  <div id="popup"></div>
 
 </body>
 </html>
