Flexible for popup content

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -35,7 +35,6 @@
 
   <!-- ==================================================================== -->
   <script src="./js/classLayer.js"></script>
-  <script src="./js/loadPopup.js"></script>
   <script src="./js/actionGeoServerLayers.js"></script>
   <script src="./js/actionMapLoader.js"></script>
 
@@ -56,6 +55,7 @@
   <!-- ==================================================================== -->
 
   <div id="popup"></div>
+  <div id="popup-content"></div>
 
 </body>
 </html>
