add class properties and json config

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -43,7 +43,7 @@
       <div class="inner cover">
         <h1>Login</h1> <br />
 
-        <form>
+        <form action="./map.html">
           <div class="form-group">
             <label for="login-user">Username</label>
             <input type="text" class="form-control" id="login-user" placeholder="username" value="admin">
