--- a/app/web/map.html
+++ b/app/web/map.html
@@ -39,10 +39,12 @@
   <script src="./lib/leaflet/ext-leaflet-ajax/dist/leaflet.ajax.min.js"></script>
 
   <!-- ==================================================================== -->
+  <script src="./js/classContentProperties.js"></script>
+  <script src="./js/classGeoServerProperties.js"></script>
   <script src="./js/classMapProperties.js"></script>
   <script src="./js/classLayerProperties.js"></script>
-  <script src="./js/actionGeoServerLayers.js"></script>
-  <script src="./js/actionMapLoader.js"></script>
+  <script src="./js/actionGeoServerLayers2.js"></script>
+  <script src="./js/actionMapLoader2.js"></script>
 
 </head>
 <body>
