Clear ..2.js -> .. .js

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -43,8 +43,8 @@
   <script src="./js/classGeoServerProperties.js"></script>
   <script src="./js/classMapProperties.js"></script>
   <script src="./js/classLayerProperties.js"></script>
-  <script src="./js/actionGeoServerLayers2.js"></script>
-  <script src="./js/actionMapLoader2.js"></script>
+  <script src="./js/actionGeoServerLayers.js"></script>
+  <script src="./js/actionMapLoader.js"></script>
 
 </head>
 <body>
