test Prepare Focus

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -43,6 +43,8 @@
   <script src="./js/classGeoServerProperties.js"></script>
   <script src="./js/classMapProperties.js"></script>
   <script src="./js/classLayerProperties.js"></script>
+
+  <script src="./js/actionPopupEvents.js"></script>
   <script src="./js/actionGeoServerLayers.js"></script>
   <script src="./js/actionMapLoader.js"></script>
 
