Stable: clean code

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -44,7 +44,7 @@
   <script src="./js/classMapProperties.js"></script>
   <script src="./js/classLayerProperties.js"></script>
 
-  <script src="./js/actionPopupEvents.js"></script>
+  <script src="./js/actionPopup.js"></script>
   <script src="./js/actionGeoServerLayers.js"></script>
   <script src="./js/actionMapLoader.js"></script>
 
