doc: Update ServerConfigurations for geoserver install

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -39,6 +39,7 @@
   <script src="./lib/leaflet/ext-leaflet-ajax/dist/leaflet.ajax.min.js"></script>
 
   <!-- ==================================================================== -->
+  <script src="./js/classRestProperties.js"></script>
   <script src="./js/classContentProperties.js"></script>
   <script src="./js/classGeoServerProperties.js"></script>
   <script src="./js/classMapProperties.js"></script>
